Started work on new widget system and then got distracted by trying to finish the vulkan implementation.